tests/query_errors/double_query/error.txt
Error: 
    6 | create query add;
      | ^^^^^^^^^^^^^^^^ Can't create the query `add` twice
